--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/swagger": "^6.1.3",
+    "@nestjs/throttler": "^3.1.0",
     "aws-sdk": "^2.1189.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "csurf": "^1.11.0",
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "moment": "^2.29.4",
