--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nestjs/common": "^9.0.8",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.8",
-    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/jwt": "^10.0.1",
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/microservices": "^9.0.8",
     "@nestjs/mongoose": "^9.2.0",
@@ -42,6 +42,7 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.5.1",
     "nats": "^2.7.1",
+    "nest-winston": "^1.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -49,7 +50,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
     "slug": "^5.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
